Added remove item buttons for each item in OrderNowPage

--- a/src/containers/OrderNowPage/OrderNowRowItem/OrderNowRowItem.module.css
+++ b/src/containers/OrderNowPage/OrderNowRowItem/OrderNowRowItem.module.css
@@ -38,3 +38,16 @@
     outline:none;
     
 }
+
+.AddMarginTop {
+
+    margin-top: 10px;
+
+}
+
+.OrderButton {
+
+    border-radius: 25px;
+    margin-bottom: 30px;
+    
+}
